# nltosql

text-to-sql/: .env  README.md  app.py  pyproject.toml  requirements.txt  sql.py
